# cargo-check-deadlock

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  dependabot_automerge.yml  schedule.yml
assets/: condition_variable_model.dot  lola
examples/programs/: repeated_function_call.rs
examples/programs/basic/: calculator.rs  greet.rs  infinite_loop.rs
examples/programs/condvar/: infinite_wait_deadlock.rs  producer_consumer.rs  producer_consumer_modified.rs  self_notify_lost_signal.rs  set_condition_before_wait.rs  wait_while.rs
examples/programs/function_call/: double_lock_deadlock.rs  drop_mutex_guard_manually.rs  find_even.rs  self_notify_lost_signal.rs  two_calls_same_function.rs
examples/programs/mutex/: double_lock_deadlock.rs  double_lock_deadlock_in_function.rs  double_lock_deadlock_with_struct.rs  (+3 more)
scripts/: accept_test_files_as_new_correct_result.sh  cargo_clippy_full.sh  check_if_rustc_version_breaks_build.sh  copy_lola_executable_to_cargo_home.sh  run_lola_and_print_witness_path.sh
src/: compiler_config.rs  counter.rs  data_structures.rs  error_handling.rs  lib.rs  main.rs  model_checker.rs  naming.rs  output_format.rs  petri_net_interface.rs  stack.rs  sysroot.rs  translator.rs  utils.rs
src/data_structures/: hash_map_counter.rs  memory_map.rs  petri_net_interface.rs  stack.rs
src/model_checker/: lola.rs
src/naming/: arc.rs  basic_block.rs  condvar.rs  function.rs  mutex.rs  program.rs  statement.rs  thread.rs
src/translator/: error_handling.rs  function.rs  function_call.rs  function_call_handler.rs  function_counter.rs  local.rs  mir_function.rs  mir_visitor.rs  multithreading.rs  mutex.rs  mutex_manager.rs  naming.rs  special_function.rs  sync.rs  thread.rs  utils.rs  virtual_memory.rs
tests/: basic.rs  condvar.rs  function_call.rs  lola.rs  mutex.rs  statement.rs  test_granite2.rs  test_input_args.rs  test_minimal_abort.rs  test_minimal_condvar_deadlock.rs  test_minimal_condvar_notify.rs  test_minimal_deadlock.rs  test_minimal_deadlock_with_arc.rs  test_minimal_diverging_function_call.rs  test_minimal_function_call.rs  test_minimal_infinite_loop.rs  test_minimal_match_statement.rs  test_minimal_panic.rs  test_minimal_program.rs  test_minimal_shared_condvar.rs  test_minimal_shared_mutex.rs  test_minimal_thread_spawn.rs  test_repeated_function_call.rs  test_two_mutexes_two_functions.rs  thread.rs
tests/basic/: test_abort.rs  test_empty_main.rs  test_infinite_loop.rs  test_panic.rs
tests/common/: mod.rs
tests/condvar/: test_infinite_wait_deadlock.rs  test_self_notify_lost_signal.rs  test_two_threads_sharing_condvar.rs
tests/function_call/: test_diverging.rs  test_empty_function.rs  test_in_a_loop.rs
tests/mutex/: test_double_lock_deadlock.rs  test_double_lock_deadlock_in_function.rs  test_double_lock_deadlock_with_arc.rs  test_two_threads_sharing_mutex.rs
tests/sample_programs/: minimal_condvar_deadlock.rs  minimal_condvar_notify.rs  minimal_deadlock_with_arc.rs  minimal_diverging_function_call.rs  minimal_function_call.rs  minimal_shared_condvar.rs  minimal_shared_mutex.rs  repeated_function_call.rs
tests/statement/: test_match.rs
tests/thread/: test_spawn_with_empty_closure.rs
tests/utils/: mod.rs
(+191 files in other folders)
