[package]
name = "cargo-check-deadlock"
version = "1.0.10"
description = "Detect deadlocks in Rust source code at compile time using Petri nets"
repository = "https://github.com/hlisdero/cargo-check-deadlock"
homepage = "https://github.com/hlisdero/cargo-check-deadlock"
authors = ["Horacio Lisdero Scaffino <hlisdero@users.noreply.github.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["petri-net", "deadlock-detection", "rustc-plugin", "model-checker", "lost-signals"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = [
    ".github/**",
    ".vscode/**",
    "assets/**",
    "scripts/**"
]

[[bin]]
name = "cargo-check-deadlock"
path = "src/bin/check-deadlock/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.5"
log = "0.4.22"
netcrab = "1.0.0"

[dev-dependencies]
assert_cmd = "2.0.15"
assert_fs = "1.1.1"
predicates = "3.1.2"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
